--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc ; vite build",
+    "build:chrome": "tsc && vite build --config vite.config.chrome.ts",
     "build-no-errors": "tsc ; vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@swc/core": "1.3.96",
+    "@types/chrome": "^0.0.301",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
